# universal-arm-controller

./: .gitignore  IPC_状态转移使用说明.md  LICENSE  README.md  build.sh  coverage_report.sh  deps.repos  run_tests.sh  test_motor_control.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  protect-branches.sh  pull_request_template.md  settings.yml
docs/: README.md  (+6 more)
src/arm_controller/: CMakeLists.txt  README.md  SCRIPT_USAGE.md  package.xml
src/arm_controller/config/: arm380_joint_limits.yaml  arm620_joint_limits.yaml  config.yaml  hardware_config.yaml  interpolator_config.yaml
src/arm_controller/docs/: ARCHITECTURE.md  CODE_STYLE.md  CONFIGURATION.md  CONTROLLERS.md  DEVELOPER.md  IPC_ARCHITECTURE.md  QUICKSTART.md  README.md  SAFETY.md  TROUBLESHOOTING.md
src/arm_controller/docs/diagrams/: collision_avoidance.puml  emergency_stop.puml  holdstate_workflow.puml  limit_protection.puml  safety_architecture.puml
src/arm_controller/example/: example_dual_arm.cpp  example_single_arm.cpp  example_trajectory.cpp
src/arm_controller/include/arm_controller/: arm_controller_api.hpp  command_queue_ipc.hpp  controller_interface.hpp  controller_manager_section.hpp  controller_node.hpp  trajectory_controller_section.hpp
src/arm_controller/include/arm_controller/controller_base/: mode_controller_base.hpp  record_controller_base.hpp  teach_controller_base.hpp  trajectory_controller_base.hpp  utility_controller_base.hpp  velocity_controller_base.hpp
src/arm_controller/include/arm_controller/controller_interface/: cartesian_velocity_interface.hpp  disable_interface.hpp  joint_velocity_interface.hpp  move2initial_interface.hpp  move2start_interface.hpp  movec_interface.hpp  movej_interface.hpp  movel_interface.hpp  point_record_interface.hpp  point_replay_interface.hpp  trajectory_record_interface.hpp  trajectory_replay_interface.hpp
src/arm_controller/include/arm_controller/dynamics/: gravity_compensator.hpp
src/arm_controller/include/arm_controller/hardware/: hardware_manager.hpp  motor_data_recorder.hpp  motor_data_reloader.hpp
src/arm_controller/include/arm_controller/ipc/: command_producer.hpp  command_queue_ipc.hpp  controller_state_manager.hpp  ipc_context.hpp  ipc_types.hpp  module_ipc_interface.hpp  shm_manager.hpp
src/arm_controller/include/arm_controller/utils/: joint_recorder.hpp  motor_mode.hpp  trajectory_converter.hpp  velocity_abb_solver.hpp  velocity_qp_solver.hpp  velocity_strict_solver.hpp
src/arm_controller/scripts/: shm_clean.sh  shm_inspect.sh  test_ipc_flow.sh
src/arm_controller/src/: arm_controller_api.cpp  controller_manager_section.cpp  main.cpp  trajectory_controller_section.cpp
src/arm_controller/src/button/: button_event_handler.cpp  button_event_handler.hpp
src/arm_controller/src/controller/: controller_registry.cpp  controller_registry.hpp
src/arm_controller/src/controller/cartesian_velocity/: cartesian_velocity_controller.cpp  cartesian_velocity_controller.hpp  cartesian_velocity_interface.cpp  cartesian_velocity_ipc_interface.cpp  cartesian_velocity_ipc_interface.hpp
src/arm_controller/src/controller/disable/: disable_controller.cpp  disable_controller.hpp  disable_interface.cpp
src/arm_controller/src/controller/hold_state/: hold_state_controller.cpp  hold_state_controller.hpp
src/arm_controller/src/controller/joint_velocity/: joint_velocity_controller.cpp  joint_velocity_controller.hpp  joint_velocity_interface.cpp  joint_velocity_ipc_interface.cpp  joint_velocity_ipc_interface.hpp
src/arm_controller/src/controller/move2initial/: move2initial_controller.cpp  move2initial_controller.hpp  move2initial_interface.cpp
src/arm_controller/src/controller/move2start/: move2start_controller.cpp  move2start_controller.hpp  move2start_interface.cpp
src/arm_controller/src/controller/movec/: movec_controller.cpp  movec_controller.hpp  movec_interface.cpp  movec_ipc_interface.cpp  movec_ipc_interface.hpp
src/arm_controller/src/controller/movej/: movej_controller.cpp  movej_controller.hpp  movej_interface.cpp  movej_ipc_interface.cpp  movej_ipc_interface.hpp
src/arm_controller/src/controller/movel/: movel_controller.cpp  movel_controller.hpp  movel_interface.cpp  movel_ipc_interface.cpp  movel_ipc_interface.hpp
src/arm_controller/src/controller/point_record/: point_record_controller.cpp  point_record_controller.hpp  point_record_interface.cpp
src/arm_controller/src/controller/point_replay/: point_replay_controller.cpp  point_replay_controller.hpp  point_replay_interface.cpp
src/arm_controller/src/controller/ros2_action_control/: ros2_action_control_controller.cpp  ros2_action_control_controller.hpp
src/arm_controller/src/controller/system_start/: system_start_controller.cpp  system_start_controller.hpp
src/arm_controller/src/controller/trajectory_record/: README.md  motor_data_recorder.cpp  motor_data_recorder.hpp  trajectory_record_controller.cpp  trajectory_record_controller.hpp  trajectory_record_interface.cpp
src/arm_controller/src/controller/trajectory_replay/: README.md  trajectory_replay_controller.cpp  trajectory_replay_controller.hpp  trajectory_replay_interface.cpp  trajectory_segmenter.cpp  trajectory_segmenter.hpp  trajectory_smoother.cpp  trajectory_smoother.hpp
src/arm_controller/src/dynamics/: gravity_compensator.cpp
src/arm_controller/src/hardware/: hardware_manager.cpp  motor_data_recorder.cpp  motor_data_reloader.cpp
src/arm_controller/src/ipc/: command_producer.cpp  controller_state_manager.cpp  ipc_context.cpp  shm_manager.cpp
src/arm_controller/src/utils/: joint_recorder.cpp  trajectory_converter.cpp  velocity_abb_solver.cpp  velocity_qp_solver.cpp  velocity_strict_solver.cpp
src/arm_controller/test/: test_arm_controller_node.cpp  test_hardware_manager.cpp  test_ipc_command_queue.cpp  test_state_transitions.cpp  test_topic_subscription_lifecycle.cpp  test_velocity_controller_subscriptions.cpp  test_velocity_qp_solver.cpp
src/robot_sdk/: CMakeLists.txt  README.md  package.xml
src/robot_sdk/include/robot_sdk/: sdk_commands.hpp
src/robot_sdk/src/: robot_sdk_node.cpp
(+31 files in other folders)
