<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>Universal arm controller for robotic manipulators</description>
  <maintainer email="d570737261@163.com">dyk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_planning_interfaces</depend>
  <depend>controller_interfaces</depend>
  <depend>yaml-cpp</depend>
  <depend>urdf</depend>
  <depend>trajectory_planning_v3</depend>
  <depend>trajectory_interpolator</depend>
  <depend>hardware_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
